# haskell-studies

./: .gitignore  README.md  chapter14.md
haskell-from-first-principles/: exercises.md
haskell-from-first-principles/addition/: Addition.hs  addition.cabal
haskell-from-first-principles/exercises/: chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  chapter09.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  exercises.md
haskell-from-first-principles/hangman/: hangman.cabal
haskell-from-first-principles/hangman/.stack-work/: stack.sqlite3
haskell-from-first-principles/hangman/.stack-work/ghci/5ee4101a/: cabal_macros.h
haskell-from-first-principles/hangman/src/: Main.hs
haskell-from-first-principles/hello/: hello.cabal
haskell-from-first-principles/morse/: morse.cabal
haskell-from-first-principles/test-files/: Cipher.hs  FunctionWithLetAndWhere.hs  MadLib.hs  Standard.hs  chapterseven.hs  learn.hs  print2.hs  print3.hs  print3flipped.hs  reverse.hs  test.hs  testing.hs  typecheck.hs  typeclasses.hs
learn-you-a-haskell/: FileSystem.hs  Geometry.hs  Shapes.hs  bytestringcopy.hs  chapter01.hs  chapter02.hs  chapter03.hs  chapter04.hs  chapter05.hs  chapter06.hs  chapter07.hs  chapter08.hs  chapter09.hs  chapter10.hs  chapter11.hs  chapter12.hs  chapter13.hs  chapter14.hs  chapter15.hs  helloworld.hs  number_game.hs  reverse.hs  todo.hs
learn-you-a-haskell/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
phillip-hagenlocher/: folding-exercises.hs  list-exercises.hs
(+12 files in other folders)
